* add templer.localcommands to the buildout

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -26,8 +26,9 @@ templer.buildout = git git@github.com:collective/templer.buildout.git
 templer.zope = git git@github.com:collective/templer.zope.git
 templer.plone = git git@github.com:collective/templer.plone.git
 templer.plonebuildout = git git@github.com:collective/templer.plonebuildout.git
-templer.plonecore = svn https://svn.plone.org/svn/collective/templer.plonecore/trunk
 templer.silva = git git@github.com:collective/templer.silva.git
+templer.localcommands = git git@github.com:collective/templer.localcommands.git
+templer.plonecore = svn https://svn.plone.org/svn/collective/templer.plonecore/trunk
 
 [templer]
 recipe = zc.recipe.egg
@@ -39,6 +40,7 @@ eggs =
     templer.plone
     templer.plonebuildout
     templer.silva
+    templer.localcommands
 
 [test]
 recipe = zc.recipe.testrunner
