* add new templer.plone.localcommands package to the buildout

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -28,6 +28,7 @@ templer.plone = git git@github.com:collective/templer.plone.git
 templer.plonebuildout = git git@github.com:collective/templer.plonebuildout.git
 templer.silva = git git@github.com:collective/templer.silva.git
 templer.localcommands = git git@github.com:collective/templer.localcommands.git
+templer.plone.localcommands = fs templer.plone.localcommands
 templer.plonecore = svn https://svn.plone.org/svn/collective/templer.plonecore/trunk
 
 [templer]
@@ -41,6 +42,7 @@ eggs =
     templer.plonebuildout
     templer.silva
     templer.localcommands
+    templer.plone.localcommands
 
 [test]
 recipe = zc.recipe.testrunner
