--- a/buildout.cfg
+++ b/buildout.cfg
@@ -28,7 +28,7 @@ templer.plone = git git@github.com:collective/templer.plone.git
 templer.plonebuildout = git git@github.com:collective/templer.plonebuildout.git
 templer.silva = git git@github.com:collective/templer.silva.git
 templer.localcommands = git git@github.com:collective/templer.localcommands.git
-templer.plone.localcommands = fs templer.plone.localcommands
+templer.plone.localcommands = git git@github.com:cewing/templer.plone.localcommands.git
 templer.plonecore = svn https://svn.plone.org/svn/collective/templer.plonecore/trunk
 
 [templer]
