* add templer.localcommands to the tests.  We are creating tests for it now.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -28,7 +28,7 @@ templer.plone = git git@github.com:collective/templer.plone.git
 templer.plonebuildout = git git@github.com:collective/templer.plonebuildout.git
 templer.silva = git git@github.com:collective/templer.silva.git
 templer.localcommands = git git@github.com:collective/templer.localcommands.git
-templer.plone.localcommands = git git@github.com:cewing/templer.plone.localcommands.git
+templer.plone.localcommands = git git@github.com:collective/templer.plone.localcommands.git
 templer.plonecore = svn https://svn.plone.org/svn/collective/templer.plonecore/trunk
 
 [templer]
@@ -53,6 +53,7 @@ eggs =
     templer.plone[test]
     templer.plonebuildout[test]
     templer.silva[test]
+    templer.localcommands[test]
 
 [omelette]
 recipe = collective.recipe.omelette
